Fix no sidebar widths and image alignment not floating

--- a/css-dev/burf-theme/_layout.scss
+++ b/css-dev/burf-theme/_layout.scss
@@ -37,7 +37,11 @@ body {
 	}
 }
 .bannerContainer-pageWidth {
-	margin-bottom: 60px;
+	margin:  -15px 0 35px;
+	
+	@include breakpoint(small) {
+		margin: 0 0 60px;
+	}
 }
 .bannerContainer-pageWidth img {
 	@include breakpoint(medium) {
